python/src/gateway/manifests/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: gateway-ingress
  annotations:
    nginx.ingress.kubernetes.ip/proxy-body-size: "0"
    nginx.ingress.kubernetes.ip/proxy-read-timeout: "600"
    nginx.ingress.kubernetes.ip/proxy-send-size: "600"
spec:
  rules:
    - host: mp3converter.com
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: gateway
                port:
                  number: 8080

# map host: mp3converter.com to localhost (minikube)
# inorder to do that sudo vim /etc/hosts
# add this line to the file:
# 127.0.0.1 mp3converter.com

# next -> configure minikube addon to accomodate ingress
# minikube addons list
# minikube addons enable ingress
